# scry

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
Memory/: activeContext.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: binary.rs  config.rs  http.rs  mod.rs  systemd.rs
src/api/: client.ts  feed.ts  groups.ts  peers.ts  retention.ts  schema.ts  status.ts  tasks.test.ts  tasks.ts  topics.ts  traces.test.ts  traces.ts  types.ts
src/components/feed/: ChatFeed.tsx  ChatMessage.tsx  FeedViewer.tsx  MessageCard.tsx  MessageComposer.tsx  SchemaForm.tsx
src/components/layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx
src/components/settings/: AuthorsSection.tsx  BridgePanel.tsx  BridgeQueueRow.tsx  ConsumerGroupsPanel.tsx  HooksEditor.tsx  PeersSection.tsx  RetentionPoliciesPanel.tsx  SchemaPanel.tsx  SettingsPanel.tsx  SystemdPanel.tsx  TopicsPanel.tsx  TransportHealthRow.tsx  UnifiedPeersPanel.tsx  validation.test.ts  validation.ts
src/components/tasks/: ActiveTasks.tsx  AssignButton.tsx  TaskDetail.tsx  TaskOffers.tsx  TaskPanel.tsx  TaskQueue.tsx
src/components/traces/: SpanRow.tsx  TracePanel.tsx  TraceWaterfall.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Toggle.tsx  ValidationMessage.tsx
src/hooks/: useSchemas.test.ts  useSchemas.ts
src/stores/: appStore.ts
